# matrix-glib-sdk

./: .gitignore  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile.am  Matrix-0.0-MatrixAPI.html  Matrix-0.0-MatrixClient.html  Matrix-0.0-MatrixEvent.html  Matrix-0.0-MatrixEventBase.html  Matrix-0.0-MatrixEventCall.html  Matrix-0.0-MatrixEventCallAnswer.html  Matrix-0.0-MatrixEventCallCandidates.html  Matrix-0.0-MatrixEventCallHangup.html  Matrix-0.0-MatrixEventCallInvite.html  Matrix-0.0-MatrixEventPresence.html  Matrix-0.0-MatrixEventReceipt.html  Matrix-0.0-MatrixEventRoom.html  Matrix-0.0-MatrixEventRoomAliases.html  Matrix-0.0-MatrixEventRoomAvatar.html  Matrix-0.0-MatrixEventRoomCanonicalAlias.html  Matrix-0.0-MatrixEventRoomCreate.html  Matrix-0.0-MatrixEventRoomGuestAccess.html  Matrix-0.0-MatrixEventRoomHistoryVisibility.html  Matrix-0.0-MatrixEventRoomJoinRules.html  Matrix-0.0-MatrixEventRoomMember.html  Matrix-0.0-MatrixEventRoomMessage.html  Matrix-0.0-MatrixEventRoomMessageFeedback.html  Matrix-0.0-MatrixEventRoomName.html  Matrix-0.0-MatrixEventRoomPowerLevels.html  Matrix-0.0-MatrixEventRoomRedaction.html  Matrix-0.0-MatrixEventRoomThirdPartyInvite.html  Matrix-0.0-MatrixEventRoomTopic.html  Matrix-0.0-MatrixEventState.html  Matrix-0.0-MatrixEventTag.html  Matrix-0.0-MatrixEventTyping.html  Matrix-0.0-MatrixHTTPAPI.html  Matrix-0.0-MatrixHTTPClient.html  Matrix-0.0-MatrixJsonCompact.html  Matrix-0.0-MatrixMessageAudio.html  Matrix-0.0-MatrixMessageBase.html  (+29 more)
docs/: Makefile.am  meson.build
docs/reference/: meson.build
docs/reference/matrix-glib/: Makefile.am  matrix-glib-docs.xml  matrix-glib-sections.txt  version.xml.in
docs/reference/matrix-glib-sdk/: Makefile.am  matrix-glib-sdk-docs.xml  matrix-glib-sdk-sections.txt  meson.build
docs/valadoc/: Makefile.am
docs/valadoc/gtk-doc/: Makefile.am
m4/: valac.m4
src/: Makefile.am  Matrix-0.0.deps  c-api.vapi  matrix-api-types.c  matrix-api-types.h  matrix-api.c  matrix-api.h  matrix-api.vala  matrix-c-compacts.c  matrix-c-compacts.h  matrix-c-types.c  matrix-c-types.h  matrix-client.c  matrix-client.h  matrix-client.vala  matrix-compacts.c  matrix-compacts.h  matrix-compacts.vala  matrix-enums.vala  matrix-enumtypes.c.template  matrix-enumtypes.h.template  matrix-event-base.c  matrix-event-base.h  matrix-event-base.vala  matrix-event-call-answer.c  matrix-event-call-answer.h  matrix-event-call-answer.vala  matrix-event-call-base.c  matrix-event-call-base.h  matrix-event-call-base.vala  matrix-event-call-candidates.c  matrix-event-call-candidates.h  matrix-event-call-candidates.vala  matrix-event-call-hangup.c  matrix-event-call-hangup.h  matrix-event-call-hangup.vala  matrix-event-call-invite.c  matrix-event-call-invite.h  matrix-event-call-invite.vala  matrix-event-presence.c  (+124 more)
vapi/: c-api.vapi  config.vapi
